--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,8 @@
     <link
       id="favicon"
       rel="icon"
-      href="https://glitch.com/edit/favicon-app.ico"
-      type="image/x-icon"
+      href="https://cdn.glitch.com/0c6538a7-9a36-4278-a4c7-7e95b8e42418%2Fgold-vinyl.png?v=1603600104741"
+      type="image"
     />
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
