🏪⛪️ Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A random vinyl record chooser" />
-    <title>What to listen to? 🤔</title>
+    <title>What to listen to?</title>
     <link
       id="favicon"
       rel="icon"
